# gromacs-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  RELEASE.md
examples/: README.md  em.mdp  ions.mdp
src/gromacs_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_integration_gromacs.py  test_server.py
